# fastapi-redis-docker

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  raw.sql  requirements.txt
app/: __main__.py  application.py  dependencies.py  logging.py  redis.py  schema.py  settings.py  views.py
docker/: Dockerfile  docker-compose.dev.yml  docker-entrypoint.sh
manage/: start.sh
